# Lufus

./: .gitignore  appimage-setup-script.sh  pyproject.toml  requirements-python.txt
.github/workflows/: build.yml  ci.yml
docs/: building.md
docs/internals/: E_USB_Detection_and_Info.md
scripts/: build-appimage-interactive.sh  build-appimage.sh  run-dev.sh
src/drives/: formatting.py
src/gui/: gui.py  start_gui.py
src/lufus/: __init__.py  lufus_logging.py  state.py  utils.py
src/lufus/drives/: find_usb.py  formatting.py  get_usb_info.py  states.py
src/lufus/gui/: dialogs.py  flash_helper.py  gui.py  start_gui.py  workers.py
src/lufus/gui/languages/: Deutsch.csv  English.csv  Español.csv  Français.csv  Português Brasileiro.csv  Russian.csv  Ukrainian.csv  Русский.csv  বাংলা.csv
src/lufus/gui/themes/default-dark/: default-dark_theme.json
src/lufus/writing/: flash_usb.py  flash_windows.py  flash_worker.py  install_ventoy.py
src/lufus/writing/windows/: detect.py  flash.py  tweaks.py
src/rufus_py/drives/: find_usb.py  states.py
src/rufus_py/gui/: gui.py
src/rufus_py/writing/: check_file_sig.py  flash_usb.py
tests/: test_find_usb.py  test_flash_usb_and_find_usb_fixes.py  test_flash_windows_and_install_ventoy_fixes.py  test_formatting.py  test_get_usb_info.py  test_get_usb_info_and_detect_windows_fixes.py  test_states_and_autodetect_fixes.py
