# This project was generated with 0.4.1 using template: https://github.com/beeware/briefcase-template @ v0.4.1
[tool.briefcase]
project_name = "Lufus"
bundle = "com.github.hog185"
# keep version synced with version in [project]
version = "0.1.0a1"
url = "https://github.com/Hog185/Lufus"
license.file = "LICENSE"
author = "Hog185"
author_email = "example@example.com"

[tool.briefcase.app.lufus]
formal_name = "Lufus"
description = "A rufus clone written in Python and designed to work with Linux."
long_description = """Lufus is a physical drive imaging and formatting utility written in Python, inspired by Rufus, with the goal of delivering a greater experience for Linux users.
"""
sources = [
    "src/lufus",
]
test_sources = [
    "tests",
]
requires = [
    "psutil>=7.2.2",
    "pyqt6>=6.10.2",
    "pyudev>=0.24.4",
    "requests",
    "platformdirs>=4.9.4"
]
test_requires = [
    "pytest",
]
[tool.briefcase.app.lufus.macOS]
universal_build = true
# As of Pyside 6.8, PySide enforces a macOS 12 minimum on wheels.
min_os_version = "12.0"
requires = [
    "std-nslog~=1.0.3",
]
[tool.briefcase.app.lufus.linux]
requires = [
]
[tool.briefcase.app.lufus.linux.system.debian]
system_requires = [
]
system_runtime_requires = [
    "libgl1",
    "libqt6dbus6",
    "libqt6gui6",
    "libxcb-cursor0",
    # The following packages are explicit dependencies on recent Debian-based
    # distros, but not on Ubuntu 22.04.
    "libxcb-icccm4",
    "libxcb-keysyms1",
    "libxcb-shape0",
    "libxkbcommon-x11-0",
    # filesystem formatting tools
    "dosfstools",
    "ntfs-3g",
    "exfatprogs",
    "e2fsprogs",
    "udftools",
]
[tool.briefcase.app.lufus.linux.system.rhel]
system_requires = [
]
system_runtime_requires = [
    "qt6-qtbase-gui",
    # filesystem formatting tools
    "dosfstools",
    "ntfs-3g",
    "exfatprogs",
    "e2fsprogs",
    "udftools",
]
[tool.briefcase.app.lufus.linux.system.suse]
system_requires = [
]
system_runtime_requires = [
    "libgthread-2_0-0",
    "libQt6Gui6",
    # filesystem formatting tools
    "dosfstools",
    "ntfs-3g",
    "exfatprogs",
    "e2fsprogs",
    "udftools",
]
[tool.briefcase.app.lufus.linux.system.arch]
system_requires = [
]
system_runtime_requires = [
    "qt6-base",
    # filesystem formatting tools
    "dosfstools",
    "ntfs-3g",
    "exfatprogs",
    "e2fsprogs",
    "udftools",
]
[tool.briefcase.app.lufus.linux.appimage]
manylinux = "manylinux_2_28"
system_requires = [
    #AppImage seemingly fails without this here so...
]
linuxdeploy_plugins = [
]
[tool.briefcase.app.lufus.linux.flatpak]
flatpak_runtime = "org.kde.Platform"
flatpak_runtime_version = "6.9"
flatpak_sdk = "org.kde.Sdk"
[tool.briefcase.app.lufus.windows]
requires = [
]
# Mobile deployments
[tool.briefcase.app.lufus.iOS]
supported = false
[tool.briefcase.app.lufus.android]
supported = false
# Web deployments
[tool.briefcase.app.lufus.web]
supported = false
[tool.lufus.metadata]
variant = "Alpha Testing 'FOV' Fork"
commit_date = 2026-03-26
is_test = true
[project]
name = "lufus"
# keep version synced with version in [tool.briefcase]
version = "0.1.0a1"
description = "Physical drive imaging and formatting utility written in Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.2.2",
    "pyqt6>=6.10.2",
    "pyudev>=0.24.4",
    "requests",
    "platformdirs>=4.9.4"
]
